# lazyfile

./: CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  install.sh
.github/workflows/: release.yml  test.yml
src/: error.rs  main.rs
src/app/: handler.rs  mod.rs  state.rs
src/config/: mod.rs
src/rclone/: client.rs  commands.rs  mod.rs  types.rs
src/ui/: layout.rs  mod.rs  styles.rs
src/ui/widgets/: confirm_modal.rs  create_remote.rs  file_list.rs  help.rs  mod.rs  remote_list.rs  status_bar.rs
